--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "fs": "0.0.1-security",
     "gray-matter": "^4.0.2",
     "highlight.js": "^10.3.2",
-    "material-ui": "^0.20.2",
+    "material-ui": "^0.15.0",
     "material-ui-flat-pagination": "^4.1.1",
-    "next": "^10.0.1",
-    "react": "16.13.1",
+    "next": "^11.0.0",
+    "react": "^17.0.2",
     "react-adsense": "^0.1.0",
-    "react-dom": "16.13.1",
+    "react-dom": "^17.0.2",
     "react-share": "^4.3.1",
-    "remark": "^12.0.1",
+    "remark": "^13.0.0",
     "remark-highlight.js": "^6.0.0",
     "remark-html": "^12.0.0",
     "swr": "^0.3.8"
