--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-share": "^4.3.1",
     "remark": "^13.0.0",
+    "remark-gfm": "^1.0.0",
     "remark-highlight.js": "^6.0.0",
     "remark-html": "^12.0.0",
     "swr": "^0.3.8"
