--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
     "deploy": "npm run build && npm run export"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "date-fns": "^2.16.1",
+    "@material-ui/core": "^4.12.3",
+    "date-fns": "^2.27.0",
     "fs": "0.0.1-security",
-    "gray-matter": "^4.0.2",
-    "highlight.js": "^10.3.2",
-    "material-ui": "^0.15.0",
-    "material-ui-flat-pagination": "^4.1.1",
-    "next": "^11.0.0",
+    "gray-matter": "^4.0.3",
+    "highlight.js": "^11.3.1",
+    "material-ui": "^0.20.0",
+    "material-ui-flat-pagination": "^4.1.2",
+    "next": "^12.0.7",
     "react": "^17.0.2",
     "react-adsense": "^0.1.0",
     "react-dom": "^17.0.2",
-    "react-share": "^4.3.1",
-    "remark": "^13.0.0",
-    "remark-gfm": "^1.0.0",
-    "remark-highlight.js": "^6.0.0",
-    "remark-html": "^12.0.0",
-    "swr": "^0.3.8"
+    "react-share": "^4.4.0",
+    "rehype-highlight": "^5.0.1",
+    "remark": "^14.0.2",
+    "remark-gfm": "^3.0.1",
+    "remark-highlight.js": "^7.0.1",
+    "remark-html": "^15.0.1",
+    "swr": "^1.1.0"
   }
 }
