--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "react-dom": "^17.0.2",
     "react-share": "^4.4.0",
     "rehype-highlight": "^5.0.1",
+    "rehype-stringify": "^9.0.2",
     "remark": "^14.0.2",
     "remark-gfm": "^3.0.1",
     "remark-highlight.js": "^7.0.1",
     "remark-html": "^15.0.1",
-    "swr": "^1.1.0"
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "swr": "^1.1.0",
+    "unified": "^10.1.1"
   }
 }
